--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -46,7 +46,7 @@
                         <div class="section-title text-center mb-75">
                             <h2>Our Goal</h2>
                             <div class="icon-img">
-                                <img src="assets/img/icon-img/1.png" alt="">
+                                <img src="web/assets/img/slider/3.jpg" alt="">
                             </div>
                             <p>There are many variations of azer duskam of Lorem Ipsum available,</p>
                         </div>
